// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu is rendered correctly 1`] = `
.c0 {
  margin-bottom: 32px;
}

.c2 {
  background: transparent;
  border: 1px solid grey;
  border-radius: 8px;
  cursor: pointer;
  font-family: inherit;
  width: 100%;
  height: calc(32px * 2);
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  border-color: black;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: left;
  padding: 0 calc(32px / 2);
}

.c3:hover {
  color: black;
}

.c4 {
  border-left: 1px solid grey;
  width: calc(32px * 2);
  height: calc(32px * 2 - 1px * 2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  font-size: 50%;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: scaleX(2) scaleY(1.2);
  -ms-transform: scaleX(2) scaleY(1.2);
  transform: scaleX(2) scaleY(1.2);
}

.c1 {
  position: relative;
}

.c6 {
  position: absolute;
  left: 0;
  right: 0;
}

<div
  className="c0"
  open={false}
>
  <div
    className="c1"
    role="listbox"
  >
    <button
      className="c2"
      onClick={[Function]}
      open={false}
      type="button"
    >
      <span
        className="c3"
      >
        Foo
      </span>
      <span
        className="c4"
      >
        <span
          className="c5"
          open={false}
        >
          ▼
        </span>
      </span>
    </button>
    <div
      className="c6"
    />
  </div>
</div>
`;

exports[`Menu is rendered correctly when open 1`] = `
.c0 {
  margin-bottom: 32px;
}

.c1 {
  background-color: transparent;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  right: 0;
  z-index: 10;
}

.c3 {
  background: transparent;
  border: 1px solid grey;
  border-radius: 8px;
  cursor: pointer;
  font-family: inherit;
  width: 100%;
  height: calc(32px * 2);
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover {
  border-color: black;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: left;
  padding: 0 calc(32px / 2);
}

.c4:hover {
  color: black;
}

.c5 {
  border-left: 1px solid grey;
  width: calc(32px * 2);
  height: calc(32px * 2 - 1px * 2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  font-size: 50%;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform: scaleX(2) scaleY(-1.2);
  -ms-transform: scaleX(2) scaleY(-1.2);
  transform: scaleX(2) scaleY(-1.2);
}

.c2 {
  position: relative;
}

.c7 {
  position: absolute;
  left: 0;
  right: 0;
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background-color: white;
  border: 1px solid grey;
  border-radius: 8px;
  overflow-y: scroll;
  max-height: 250px;
  z-index: 100;
}

.c9 {
  font-weight: 600;
  cursor: pointer;
  padding: calc(8px - 1px * 2) calc(8px * 2);
  border: 1px solid transparent;
  border-width: 1px 0 1px 0;
  white-space: nowrap;
}

.c9:hover {
  background: grey;
  border-color: grey;
}

.c9:first-child:hover {
  border-top-color: grey;
}

.c9:last-child:hover {
  border-bottom-color: grey;
}

.c10 {
  color: #444;
  font-weight: inherit;
  cursor: pointer;
  padding: calc(8px - 1px * 2) calc(8px * 2);
  border: 1px solid transparent;
  border-width: 1px 0 1px 0;
  white-space: nowrap;
}

.c10:hover {
  background: grey;
  border-color: grey;
}

.c10:first-child:hover {
  border-top-color: grey;
}

.c10:last-child:hover {
  border-bottom-color: grey;
}

<div
  className="c0"
  open={true}
>
  <div
    className="c1"
    onClick={[Function]}
  />
  <div
    className="c2"
    role="listbox"
  >
    <button
      className="c3"
      onClick={[Function]}
      open={true}
      type="button"
    >
      <span
        className="c4"
      >
        Foo
      </span>
      <span
        className="c5"
      >
        <span
          className="c6"
          open={true}
        >
          ▼
        </span>
      </span>
    </button>
    <div
      className="c7"
    >
      <div
        className="c8"
        open={true}
      >
        <div
          aria-selected={true}
          className="c9"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex="0"
        >
          Foo
        </div>
        <div
          aria-selected={false}
          className="c10"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex="0"
        >
          Bar
        </div>
      </div>
    </div>
  </div>
</div>
`;
